--- a/index.html
+++ b/index.html
@@ -6,12 +6,44 @@
   <title>CLEAR BICYCLES – Zakázková MTB kola</title>
   <style>
     body { margin: 0; font-family: Arial, sans-serif; line-height: 1.6; color: #333; }
-    header { background: #111; color: white; padding: 20px; position: sticky; top: 0; z-index: 1000; }
-    header .logo-wrap { display: flex; align-items: center; justify-content: center; gap: 15px; }
+    
+    /* Upravený header */
+    header {
+      background: silver;
+      color: #111;
+      padding: 20px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    header .logo-wrap {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+    }
+
     header img { height: 60px; }
-    header h1 { margin: 0; font-size: 2em; letter-spacing: 2px; }
-    nav { margin-top: 10px; text-align: center; }
-    nav a { margin: 0 15px; color: white; text-decoration: none; font-weight: bold; }
+
+    header h1 {
+      margin: 0;
+      font-size: 2em;
+      letter-spacing: 2px;
+    }
+
+    nav {
+      margin-top: 10px;
+      text-align: center;
+    }
+
+    nav a {
+      margin: 0 15px;
+      color: #111;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
     nav a:hover { color: #e63946; }
 
     .hero {
@@ -20,32 +52,74 @@
       text-align: center;
       padding: 120px 20px;
     }
+
     .hero h2 { font-size: 2.5em; margin-bottom: 10px; }
     .hero p { font-size: 1.2em; }
 
-    .container { padding: 40px 20px; max-width: 1200px; margin: auto; }
+    .container {
+      padding: 40px 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
     h2 { margin-bottom: 20px; color: #222; }
 
     /* Gallery */
-    .gallery { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; }
-    .gallery img { width: 100%; max-width: 350px; border-radius: 8px; box-shadow: 0 3px 6px rgba(0,0,0,0.2); }
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 15px;
+    }
+
+    .gallery img {
+      width: 100%;
+      max-width: 350px;
+      border-radius: 8px;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.2);
+    }
 
     /* Slider */
-    .slider { position: relative; max-width: 900px; margin: auto; overflow: hidden; border-radius: 10px; }
-    .slides { display: flex; transition: transform 0.6s ease; }
-    .slides img { width: 100%; }
-    .slider button {
-      position: absolute; top: 50%; transform: translateY(-50%);
-      background: rgba(0,0,0,0.6); color: white; border: none;
-      padding: 10px 20px; cursor: pointer; font-size: 18px;
+    .slider {
+      position: relative;
+      max-width: 900px;
+      margin: auto;
+      overflow: hidden;
+      border-radius: 10px;
     }
+
+    .slides {
+      display: flex;
+      transition: transform 0.6s ease;
+    }
+
+    .slides img { width: 100%; }
+
+    .slider button {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(0,0,0,0.6);
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      cursor: pointer;
+      font-size: 18px;
+    }
+
     .prev { left: 10px; }
     .next { right: 10px; }
 
     /* Kontakt */
     .contact p { margin: 5px 0; }
 
-    footer { background: #111; color: #ddd; text-align: center; padding: 15px; margin-top: 30px; }
+    footer {
+      background: #111;
+      color: #ddd;
+      text-align: center;
+      padding: 15px;
+      margin-top: 30px;
+    }
   </style>
 </head>
 <body>
