--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CLEAR BICYCLES – Zakázková MTB kola</title>
   <style>
-    body { margin: 0; font-family: Arial, sans-serif; line-height: 1.6; color: #333; }
-    
-    /* Upravený header */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      color: #333;
+    }
+
     header {
       background: silver;
-      color: #111;
       padding: 20px;
       position: sticky;
       top: 0;
@@ -21,15 +24,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 15px;
     }
 
-    header img { height: 60px; }
-
-    header h1 {
-      margin: 0;
-      font-size: 2em;
-      letter-spacing: 2px;
+    header img {
+      height: 70px;
     }
 
     nav {
@@ -44,7 +42,9 @@
       font-weight: bold;
     }
 
-    nav a:hover { color: #e63946; }
+    nav a:hover {
+      color: #e63946;
+    }
 
     .hero {
       background: url("images/hero-bike.jpg") center/cover no-repeat;
@@ -53,18 +53,43 @@
       padding: 120px 20px;
     }
 
-    .hero h2 { font-size: 2.5em; margin-bottom: 10px; }
-    .hero p { font-size: 1.2em; }
+    .hero h2 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    .hero p {
+      font-size: 1.2em;
+    }
 
     .container {
       padding: 40px 20px;
-      max-width: 1200px;
+      max-width: 1400px;
       margin: auto;
     }
 
-    h2 { margin-bottom: 20px; color: #222; }
+    h2 {
+      margin-bottom: 20px;
+      color: #222;
+    }
 
-    /* Gallery */
+    .bike-section {
+      margin-bottom: 60px;
+    }
+
+    .bike-section img {
+      max-width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 3px 6px rgba(0,0,0,0.2);
+      display: block;
+    }
+
+    .bike-section img:empty,
+    .bike-section img[src=""],
+    .bike-section img:not([src]) {
+      display: none;
+    }
+
     .gallery {
       display: flex;
       flex-wrap: wrap;
@@ -79,39 +104,15 @@
       box-shadow: 0 3px 6px rgba(0,0,0,0.2);
     }
 
-    /* Slider */
-    .slider {
-      position: relative;
-      max-width: 900px;
-      margin: auto;
-      overflow: hidden;
-      border-radius: 10px;
+    .gallery img:empty,
+    .gallery img[src=""],
+    .gallery img:not([src]) {
+      display: none;
     }
 
-    .slides {
-      display: flex;
-      transition: transform 0.6s ease;
+    .contact p {
+      margin: 5px 0;
     }
-
-    .slides img { width: 100%; }
-
-    .slider button {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: rgba(0,0,0,0.6);
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      cursor: pointer;
-      font-size: 18px;
-    }
-
-    .prev { left: 10px; }
-    .next { right: 10px; }
-
-    /* Kontakt */
-    .contact p { margin: 5px 0; }
 
     footer {
       background: #111;
@@ -126,12 +127,15 @@
   <header>
     <div class="logo-wrap">
       <img src="images/logo.png" alt="Clear Bicycles Logo">
-      <h1>CLEAR BICYCLES</h1>
     </div>
     <nav>
       <a href="#o-nas">O nás</a>
       <a href="#technologie">Technologie</a>
-      <a href="#kola">Naše kola</a>
+      <a href="#trail">Trail</a>
+      <a href="#enduro">Enduro</a>
+      <a href="#freeride">Freeride</a>
+      <a href="#dh">Downhill</a>
+      <a href="#dirtjump">Dirt Jump</a>
       <a href="#galerie">Galerie</a>
       <a href="#kontakt">Kontakt</a>
     </nav>
@@ -153,17 +157,35 @@
       <p>Každý rám je navržen s pomocí pokročilých výpočtů a FEM analýz. To nám umožňuje optimalizovat pevnost a tuhost přesně podle jízdního stylu zákazníka. Používáme <strong>ocel</strong> – pro její lepší pružnost, opravitelnost a charakter, který jiné materiály nemají. Rámy nabízíme v základním nelakovaném provedení, čisté a syrové.</p>
     </section>
 
-    <section id="kola">
-      <h2>Naše modely</h2>
-      <div class="slider">
-        <div class="slides">
-          <img src="images/kolo1.jpg" alt="Enduro model">
-          <img src="images/kolo2.jpg" alt="Trail model">
-          <img src="images/kolo3.jpg" alt="Dirt jump model">
-        </div>
-        <button class="prev">❮</button>
-        <button class="next">❯</button>
-      </div>
+    <!-- Jednotlivé modely -->
+    <section id="trail" class="bike-section">
+      <h2>Trail</h2>
+      <img src="images/trail.jpg" alt="Trail model">
+      <p>Univerzální geometrie vhodná pro denní ježdění, výlety a lehký terén.</p>
+    </section>
+
+    <section id="enduro" class="bike-section">
+      <h2>Enduro</h2>
+      <img src="images/enduro.jpg" alt="Enduro model">
+      <p>Robustní konstrukce připravená zvládnout i ty nejtěžší traily.</p>
+    </section>
+
+    <section id="freeride" class="bike-section">
+      <h2>Freeride</h2>
+      <img src="images/freeride.jpg" alt="Freeride model">
+      <p>Maximální odolnost pro skoky, dropy a technické sekce.</p>
+    </section>
+
+    <section id="dh" class="bike-section">
+      <h2>Downhill (DH)</h2>
+      <img src="images/dh.jpg" alt="DH model">
+      <p>Kolo navržené pro rychlou jízdu z kopce a závody ve sjezdu.</p>
+    </section>
+
+    <section id="dirtjump" class="bike-section">
+      <h2>Dirt Jump</h2>
+      <img src="images/dirtjump.jpg" alt="Dirt Jump model">
+      <p>Krátký rám a pevnost pro skoky a pumptracky. Maximální kontrola ve vzduchu.</p>
     </section>
 
     <section id="galerie">
@@ -178,8 +200,8 @@
 
     <section id="kontakt" class="contact">
       <h2>Kontakt</h2>
-      <p><strong>Email:</strong> info@clearbicycles.cz</p>
-      <p><strong>Telefon:</strong> +420 123 456 789</p>
+      <p><strong>Email:</strong> <a href="mailto:clearbicycles@gmail.com">clearbicycles@gmail.com</a></p>
+      <p><strong>Telefon:</strong> <a href="tel:+420607835202">+420 607 835 202</a></p>
       <p><strong>Adresa dílny:</strong> Praha – Česká republika</p>
     </section>
   </div>
@@ -187,25 +209,5 @@
   <footer>
     © 2025 CLEAR BICYCLES – Ručně vyráběná kola na zakázku
   </footer>
-
-  <script>
-    const slides = document.querySelector('.slides');
-    const images = document.querySelectorAll('.slides img');
-    const prevBtn = document.querySelector('.prev');
-    const nextBtn = document.querySelector('.next');
-
-    let index = 0;
-    function showSlide(i) {
-      if (i < 0) index = images.length - 1;
-      else if (i >= images.length) index = 0;
-      else index = i;
-      slides.style.transform = `translateX(${-index * 100}%)`;
-    }
-
-    prevBtn.addEventListener('click', () => showSlide(index - 1));
-    nextBtn.addEventListener('click', () => showSlide(index + 1));
-
-    setInterval(() => showSlide(index + 1), 5000); // automatické přepínání
-  </script>
 </body>
 </html>
