--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CLEAR BICYCLES – Zakázková MTB kola</title>
+  <title>CLEAR BICYCLES</title>
   <style>
     body {
       margin: 0;
@@ -14,7 +14,7 @@
 
     header {
       background: silver;
-      padding: 20px;
+      padding: 10px 20px;
       position: sticky;
       top: 0;
       z-index: 1000;
@@ -27,7 +27,7 @@
     }
 
     header img {
-      height: 70px;
+      height: 100px;
     }
 
     nav {
@@ -207,7 +207,7 @@
   </div>
 
   <footer>
-    © 2025 CLEAR BICYCLES – Ručně vyráběná kola na zakázku
+    © 2025 CLEAR BICYCLES
   </footer>
 </body>
 </html>
