--- a/index.html
+++ b/index.html
@@ -236,41 +236,41 @@
     <!-- Jednotlivé modely -->
     <section id="trail" class="bike-section">
       <h2>Trail</h2>
-      <img src="images/trail.jpg" alt="Trail model" loading="lazy" />
+      <img src="images/trail.jpg" alt="Trail model" class="lazy-image" loading="lazy" />
       <p>Univerzální geometrie vhodná pro denní ježdění, výlety a lehký terén.</p>
     </section>
 
     <section id="enduro" class="bike-section">
       <h2>Enduro</h2>
-      <img src="images/enduro.jpg" alt="Enduro model" loading="lazy" />
+      <img src="images/enduro.jpg" alt="Enduro model" class="lazy-image" loading="lazy" />
       <p>Robustní konstrukce připravená zvládnout i ty nejtěžší traily.</p>
     </section>
 
     <section id="freeride" class="bike-section">
       <h2>Freeride</h2>
-      <img src="images/freeride.jpg" alt="Freeride model" loading="lazy" />
+      <img src="images/freeride.jpg" alt="Freeride model" class="lazy-image" loading="lazy" />
       <p>Maximální odolnost pro skoky, dropy a technické sekce.</p>
     </section>
 
     <section id="dh" class="bike-section">
       <h2>Downhill (DH)</h2>
-      <img src="images/dh.jpg" alt="DH model" loading="lazy" />
+      <img src="images/dh.jpg" alt="DH model" class="lazy-image" loading="lazy" />
       <p>Kolo navržené pro rychlou jízdu z kopce a závody ve sjezdu.</p>
     </section>
 
     <section id="dirtjump" class="bike-section">
       <h2>Dirt Jump</h2>
-      <img src="images/dirtjump.jpg" alt="Dirt Jump model" loading="lazy" />
+      <img src="images/dirtjump.jpg" alt="Dirt Jump model" class="lazy-image" loading="lazy" />
       <p>Krátký rám a pevnost pro skoky a pumptracky. Maximální kontrola ve vzduchu.</p>
     </section>
 
     <section id="galerie">
       <h2>Galerie</h2>
       <div class="gallery">
-        <img src="images/detail-svaru.jpg" alt="Detail svaru" loading="lazy" />
-        <img src="images/ocelovy-ram.jpg" alt="Ocelový rám" loading="lazy" />
-        <img src="images/testovani.jpg" alt="Testování rámu" loading="lazy" />
-        <img src="images/fem-analyza.jpg" alt="FEM analýza" loading="lazy" />
+        <img src="images/detail-svaru.jpg" alt="Detail svaru" class="lazy-image" loading="lazy" />
+        <img src="images/ocelovy-ram.jpg" alt="Ocelový rám" class="lazy-image" loading="lazy" />
+        <img src="images/testovani.jpg" alt="Testování rámu" class="lazy-image" loading="lazy" />
+        <img src="images/fem-analyza.jpg" alt="FEM analýza" class="lazy-image" loading="lazy" />
       </div>
     </section>
 
