--- a/index.html
+++ b/index.html
@@ -406,6 +406,14 @@
 
       <div id="vysledek"></div>
     </section>
+
+    <section id="kontakt" class="contact">
+      <h2>Kontakt</h2>
+      <p><strong>Email:</strong> <a href="mailto:clearbicycles@gmail.com">clearbicycles@gmail.com</a></p>
+      <p><strong>Telefon:</strong> <a href="tel:+420607835202">+420 607 835 202</a></p>
+      <p><strong>Adresa dílny:</strong> Praha – Česká republika</p>
+   </section>
+    
   </div>
 
   <footer>
