--- a/index.html
+++ b/index.html
@@ -389,6 +389,10 @@
             <option value="">-- Vyberte rozměr --</option>
           </select>
 
+          <label for="poznamky">Speciální požadavky (nepovinné):</label>
+<textarea id="poznamky" name="poznamky" rows="3" placeholder="Zde můžete napsat např. úpravy geometrie, montážní prvky, jiné materiály atd."></textarea>
+
+
           <!-- Přidám další komponenty analogicky, ale kvůli přehlednosti zkrátím -->
 
           <!-- Přidám tlačítko odeslat -->
