--- a/index.html
+++ b/index.html
@@ -225,12 +225,30 @@
   <div class="container">
     <section id="o-nas">
       <h2>O nás</h2>
-      <p>Jsme český výrobce MTB kol, kde každý rám vzniká od nuly podle zákazníka. Vše vyrábíme ručně, s důrazem na funkčnost, čistý design a dlouhou životnost. Každý rám je výsledkem technické práce, precizního svařování a promyšleného výpočtu.</p>
+      <p>Clear Bicycles je značka, která staví na přesvědčení, že kolo má být jedinečné stejně jako jezdec, který na něm jede.
+Každý rám vzniká na základě konzultace a návrhu přímo pro konkrétního zákazníka. Žádné univerzální typy – vždy individuální geometrie, která respektuje vaši postavu, styl jízdy i požadavky na výkon.
+Na rozdíl od sériové výroby se věnujeme každému detailu. Za projektem stojí strojní konstruktér se zkušeností z návrhu průmyslových strojů, kde se chyby nepřipouští. Stejný přístup uplatňujeme i při konstrukci rámů – přesnost, pevnost a důvěryhodnost.
+      Proč Clear Bicycles
+Každý rám je originál – navržený na míru jezdci.
+Výroba probíhá v Česku z kvalitních materiálů.
+Stejná důslednost jako při konstrukci průmyslových strojů.
+Plná transparentnost a spolupráce se zákazníkem.
+Kolo, které nikdo jiný na světě mít nebude.</p>
     </section>
 
     <section id="technologie">
       <h2>Naše technologie</h2>
-      <p>Každý rám je navržen s pomocí pokročilých výpočtů a FEM analýz. To nám umožňuje optimalizovat pevnost a tuhost přesně podle jízdního stylu zákazníka. Používáme <strong>ocel</strong> – pro její lepší pružnost, opravitelnost a charakter, který jiné materiály nemají. Rámy nabízíme v základním nelakovaném provedení, čisté a syrové.</p>
+      <p>Každý rám prochází kompletním procesem návrhu a výroby:
+Inženýrský návrh a analýzy – FEM a dynamické simulace zajišťují správnou pevnost a dlouhou životnost.
+Zakázková výroba – každý obrobek i svár je vytvořen individuálně pro konkrétní rám.
+Transparentnost – zákazník může sledovat celý proces pomocí fotodokumentace a výsledků analýz.
+Materiály z ČR – používáme kvalitní ocel a hliník od českých dodavatelů.
+Volitelný lak – základním vzhledem je čistý kov, ale na přání lze zvolit jakoukoli barvu.
+      Konfigurace
+Kompletní kolo nebo rámová sada.
+Možnost dodat vlastní komponenty, které rádi namontujeme.
+Během stavby probíhají konzultace – pokud je potřeba rám vyztužit nebo změnit konstrukci, vše řešíme se zákazníkem.
+Výsledkem je kolo přesně podle vašich představ.</p>
     </section>
 
     <!-- Jednotlivé modely -->
