--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
       <a href="#dh">Downhill</a>
       <a href="#dirtjump">Dirt Jump</a>
       <a href="#galerie">Galerie</a>
-      <a href="#kontakt">Kontakt</a>
       <a href="#konfigurator">Konfigurátor</a>
+      <a href="#kontakt">Kontakt</a>
     </nav>
   </header>
 
@@ -223,33 +223,52 @@
   </section>
 
   <div class="container">
-    <section id="o-nas">
-      <h2>O nás</h2>
-      <p>Clear Bicycles je značka, která staví na přesvědčení, že kolo má být jedinečné stejně jako jezdec, který na něm jede.
-Každý rám vzniká na základě konzultace a návrhu přímo pro konkrétního zákazníka. Žádné univerzální typy – vždy individuální geometrie, která respektuje vaši postavu, styl jízdy i požadavky na výkon.
-Na rozdíl od sériové výroby se věnujeme každému detailu. Za projektem stojí strojní konstruktér se zkušeností z návrhu průmyslových strojů, kde se chyby nepřipouští. Stejný přístup uplatňujeme i při konstrukci rámů – přesnost, pevnost a důvěryhodnost.
-      Proč Clear Bicycles
-Každý rám je originál – navržený na míru jezdci.
-Výroba probíhá v Česku z kvalitních materiálů.
-Stejná důslednost jako při konstrukci průmyslových strojů.
-Plná transparentnost a spolupráce se zákazníkem.
-Kolo, které nikdo jiný na světě mít nebude.</p>
-    </section>
+  <!-- O nás -->
+  <section id="o-nas">
+    <h2>O nás</h2>
+    
+    <p><strong>Clear Bicycles</strong> staví na přesvědčení, že <strong>kolo má být jedinečné</strong> – stejně jako jezdec, který na něm jede.</p>
 
-    <section id="technologie">
-      <h2>Naše technologie</h2>
-      <p>Každý rám prochází kompletním procesem návrhu a výroby:
-Inženýrský návrh a analýzy – FEM a dynamické simulace zajišťují správnou pevnost a dlouhou životnost.
-Zakázková výroba – každý obrobek i svár je vytvořen individuálně pro konkrétní rám.
-Transparentnost – zákazník může sledovat celý proces pomocí fotodokumentace a výsledků analýz.
-Materiály z ČR – používáme kvalitní ocel a hliník od českých dodavatelů.
-Volitelný lak – základním vzhledem je čistý kov, ale na přání lze zvolit jakoukoli barvu.
-      Konfigurace
-Kompletní kolo nebo rámová sada.
-Možnost dodat vlastní komponenty, které rádi namontujeme.
-Během stavby probíhají konzultace – pokud je potřeba rám vyztužit nebo změnit konstrukci, vše řešíme se zákazníkem.
-Výsledkem je kolo přesně podle vašich představ.</p>
-    </section>
+    <p>Každý rám vzniká <strong>na základě individuální konzultace</strong> a návrhu. Žádné univerzální typy – pouze geometrie přizpůsobená postavě, stylu jízdy a vašim požadavkům.</p>
+
+    <p>Za projektem stojí <strong>strojní konstruktér</strong> se zkušeností z průmyslu, kde je preciznost klíčová. Stejné nároky klademe i na výrobu rámů.</p>
+
+    <h3>Proč právě Clear Bicycles?</h3>
+    <ul>
+      <li>✔️ Rám navržený <strong>na míru</strong> jezdci</li>
+      <li>✔️ Výroba v <strong>Česku</strong> z kvalitních materiálů</li>
+      <li>✔️ Přesnost a důslednost jako v průmyslové výrobě</li>
+      <li>✔️ <strong>Transparentní spolupráce</strong> se zákazníkem</li>
+      <li>✔️ Kolo, které <strong>nikdo jiný na světě mít nebude</strong></li>
+    </ul>
+  </section>
+
+  <!-- Technologie -->
+  <section id="technologie">
+    <h2>Naše technologie</h2>
+
+    <p>Každý rám prochází <strong>kompletním procesem návrhu a výroby</strong> – od prvotního designu až po finální montáž.</p>
+
+    <h3>Co zahrnuje výroba rámu?</h3>
+    <ul>
+      <li>🛠️ <strong>Inženýrský návrh a simulace</strong> – FEM analýzy a dynamické výpočty zajišťují pevnost i dlouhou životnost.</li>
+      <li>⚙️ <strong>Zakázková výroba</strong> – každý díl a svár je vytvořen individuálně pro konkrétní rám.</li>
+      <li>📸 <strong>Transparentnost</strong> – celý proces dokumentujeme, včetně výstupů z analýz.</li>
+      <li>🇨🇿 <strong>Materiály z Česka</strong> – kvalitní ocel a hliník od prověřených dodavatelů.</li>
+      <li>🎨 <strong>Povrchová úprava dle přání</strong> – výchozí je čistý kov, ale můžete si zvolit libovolnou barvu.</li>
+    </ul>
+
+    <h3>Konfigurace kola</h3>
+    <ul>
+      <li>🚴 Kompletní kolo nebo pouze rámová sada</li>
+      <li>🔧 Můžete dodat vlastní komponenty – rádi je namontujeme</li>
+      <li>📞 Během výroby probíhají konzultace – případné úpravy řešíme společně</li>
+    </ul>
+
+    <p><strong>Výsledkem je kolo přesně podle vašich představ.</strong></p>
+  </section>
+</div>
+
 
     <!-- Jednotlivé modely -->
     <section id="trail" class="bike-section">
